--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <module>j360-dubbo-dao</module>
         <module>j360-dubbo-base</module>
         <module>j360-dubbo-web</module>
+        <module>j360-dubbo-trace</module>
+        <module>j360-dubbo-springfox</module>
+        <module>j360-dubbo-autotest</module>
     </modules>
 
 
