--- a/j360-dubbo-api/pom.xml
+++ b/j360-dubbo-api/pom.xml
@@ -10,6 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>j360-dubbo-api</artifactId>
-
+    <description>二方包,对外提供rpc接口</description>
 
 </project>
