--- a/j360-dubbo-api/pom.xml
+++ b/j360-dubbo-api/pom.xml
@@ -19,5 +19,9 @@
             <artifactId>j360-dubbo-base</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 </project>
