--- a/j360-dubbo-dao/pom.xml
+++ b/j360-dubbo-dao/pom.xml
@@ -53,6 +53,14 @@
             <artifactId>aspectjweaver</artifactId>
         </dependency>
 
+        <!-- LOGGING begin -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <!-- LOGGING end -->
+
     </dependencies>
 
 
