--- a/j360-dubbo-biz/src/main/resources/config.properties
+++ b/j360-dubbo-biz/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-ic.jdbc.url=jdbc:mysql://10.0.128.102:3306/item?characterEncoding=utf8
-ic.jdbc.username=pajk
-ic.jdbc.password=qawsed123
+ic.jdbc.url=jdbc:mysql://localhost:3306/dbtbl_0_master?characterEncoding=utf8
+ic.jdbc.username=root
+ic.jdbc.password=pass
 
