add sjdbc to jdbc

--- a/j360-dubbo-biz/src/main/resources/config.properties
+++ b/j360-dubbo-biz/src/main/resources/config.properties
@@ -2,3 +2,13 @@ ic.jdbc.url=jdbc:mysql://localhost:3306/dbtbl_0_master?characterEncoding=utf8
 ic.jdbc.username=root
 ic.jdbc.password=pass
 
+dbtbl_0_master.driver=com.mysql.jdbc.Driver
+dbtbl_0_master.url=jdbc:mysql://localhost:3306/dbtbl_0_master
+dbtbl_0_master.username=root
+dbtbl_0_master.password=pass
+
+dbtbl_0_slave_0.driver=com.mysql.jdbc.Driver
+dbtbl_0_slave_0.url=jdbc:mysql://localhost:3306/dbtbl_0_slave_0
+dbtbl_0_slave_0.username=root
+dbtbl_0_slave_0.password=pass
+
