--- a/j360-dubbo-biz/pom.xml
+++ b/j360-dubbo-biz/pom.xml
@@ -90,6 +90,12 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.5.3</version>
+        </dependency>
+
         <!-- test-lib -->
         <dependency>
             <groupId>junit</groupId>
