add dubbo filter support brave sample client

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>j360-dubbo-modules</module>
         <module>j360-dubbo-sjdbc</module>
         <module>j360-dubbo-hytrix</module>
+        <module>j360-dubbo-client</module>
     </modules>
 
 
