--- a/j360-dubbo-base/pom.xml
+++ b/j360-dubbo-base/pom.xml
@@ -17,5 +17,9 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
