--- a/j360-dubbo-web/pom.xml
+++ b/j360-dubbo-web/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>war</packaging>
 
     <artifactId>j360-dubbo-web</artifactId>
     <description>对外提供http的web包</description>
