--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>j360-dubbo-sjdbc</module>
         <module>j360-dubbo-hytrix</module>
         <module>j360-dubbo-client</module>
+        <module>j360-dubbo-tcc</module>
     </modules>
 
 
