--- a/j360-dubbo-web/pom.xml
+++ b/j360-dubbo-web/pom.xml
@@ -17,6 +17,11 @@
     <dependencies>
         <dependency>
             <groupId>me.j360.dubbo</groupId>
+            <artifactId>j360-dubbo-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>me.j360.dubbo</groupId>
             <artifactId>j360-dubbo-base</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
